--- a/package.json
+++ b/package.json
@@ -62,12 +62,19 @@
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
+    "ajv": "^6.10.2",
     "fs-extra": "^8.1.0",
     "loglevel": "^1.6.6",
     "pirates": "^4.0.1",
     "ramda": "^0.26.1"
   },
   "peerDependencies": {
+    "@babel/core": "7.x",
+    "@babel/preset-env": "7.x",
     "vue-template-compiler": "2.x"
+  },
+  "optionalDependencies": {
+    "@babel/core": "7.x",
+    "@babel/preset-env": "7.x"
   }
 }
