--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npm run test -- --watch"
   },
   "mocha": {
+    "file": "test/setup.js",
     "spec": "test/**/*.spec.js",
     "timeout": 4000,
     "color": true
@@ -63,6 +64,7 @@
   "dependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
     "ajv": "^6.10.2",
+    "find-cache-dir": "^3.1.0",
     "fs-extra": "^8.1.0",
     "loglevel": "^1.6.6",
     "pirates": "^4.0.1",
