--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha",
     "test:watch": "npm run test -- --watch",
     "prerelease": "npm run lint && npm run test",
-    "release": "git checkout master && git pull --rebase origin master && standard-version && git push --follow-tags origin master && npm publish --access=public"
+    "release": "git checkout master && git pull --rebase origin master && standard-version && git push --follow-tags origin master && npm publish --access=public",
+    "prepare": "husky install"
   },
   "prettier": {
     "printWidth": 80,
@@ -29,12 +30,6 @@
     "timeout": 4000,
     "color": true
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm test"
-    }
-  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
@@ -43,7 +38,7 @@
     ]
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
   "repository": {
     "type": "git",
@@ -63,31 +58,31 @@
     "node"
   ],
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-unicorn": "^23.0.0",
-    "eslint-plugin-vue": "^7.2.0",
-    "husky": "^4.3.5",
-    "lint-staged": "^10.5.3",
-    "mocha": "^8.2.1",
-    "prettier": "^2.2.1",
-    "sinon": "^9.2.1",
-    "standard-version": "^9.0.0",
+    "eslint-plugin-unicorn": "^32.0.1",
+    "eslint-plugin-vue": "^7.9.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "mocha": "^8.4.0",
+    "prettier": "^2.3.0",
+    "sinon": "^11.1.1",
+    "standard-version": "^9.3.0",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
-    "ajv": "^6.12.6",
+    "ajv": "^8.5.0",
     "find-cache-dir": "^3.3.1",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^10.0.0",
     "loglevel": "^1.7.1",
     "pirates": "^4.0.1",
     "ramda": "^0.27.1",
@@ -100,7 +95,7 @@
     "vue-template-compiler": "2.x"
   },
   "optionalDependencies": {
-    "@babel/core": "7.x",
-    "@babel/preset-env": "7.x"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2"
   }
 }
