--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     ]
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.0.0",
+    "npm": "^6.14.11"
   },
   "repository": {
     "type": "git",
@@ -58,36 +59,35 @@
     "node"
   ],
   "devDependencies": {
-    "chai": "^4.3.4",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-semistandard": "^16.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-mocha": "^9.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-unicorn": "^37.0.1",
-    "eslint-plugin-vue": "^7.20.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^11.2.6",
-    "mocha": "^9.1.3",
-    "prettier": "^2.4.1",
-    "sinon": "^11.1.2",
-    "standard-version": "^9.3.2",
-    "vue-template-compiler": "^2.6.14"
+    "chai": "^4.3.6",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "eslint-plugin-vue": "^9.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "sinon": "^14.0.0",
+    "standard-version": "^9.5.0",
+    "vue-template-compiler": "^2.7.7"
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
-    "ajv": "^8.6.3",
+    "ajv": "^8.11.0",
     "find-cache-dir": "^3.3.2",
-    "fs-extra": "^10.0.0",
-    "loglevel": "^1.7.1",
-    "pirates": "^4.0.1",
-    "ramda": "^0.27.1",
-    "source-map": "^0.7.3",
-    "source-map-support": "^0.5.20"
+    "fs-extra": "^10.1.0",
+    "loglevel": "^1.8.0",
+    "pirates": "^4.0.5",
+    "ramda": "^0.28.0",
+    "source-map": "^0.7.4",
+    "source-map-support": "^0.5.21"
   },
   "peerDependencies": {
     "@babel/core": "7.x",
