--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "@prepair/require-extension-vue",
   "version": "2.0.3",
   "description": "Simple vue file support for node. Mainly for testing purposes.",
-  "main": "src/index.js",
+  "main": "./src/index.js",
+  "exports": "./src/index.js",
+  "type": "commonjs",
   "scripts": {
     "lint": "eslint src",
-    "test": "mocha",
+    "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "npm run test -- --watch",
     "prerelease": "npm run lint && npm run test",
     "release": "git checkout master && git pull --rebase origin master && standard-version && git push --follow-tags origin master && npm publish --access=public",
@@ -25,7 +27,7 @@
     "endOfLine": "lf"
   },
   "mocha": {
-    "file": "test/setup.js",
+    "require": "test/setup.js",
     "spec": "test/**/*.spec.js",
     "timeout": 4000,
     "color": true
@@ -60,6 +62,7 @@
   ],
   "devDependencies": {
     "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-semistandard": "^17.0.0",
@@ -76,7 +79,7 @@
     "prettier": "^2.7.1",
     "sinon": "^14.0.0",
     "standard-version": "^9.5.0",
-    "vue-template-compiler": "^2.7.7"
+    "vue": "^2.7.8"
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
@@ -91,8 +94,7 @@
   },
   "peerDependencies": {
     "@babel/core": "7.x",
-    "@babel/preset-env": "7.x",
-    "vue-template-compiler": "2.x"
+    "@babel/preset-env": "7.x"
   },
   "peerDependenciesMeta": {
     "@babel/core": {
@@ -101,8 +103,11 @@
     "@babel/preset-env": {
       "optional": true
     },
+    "vue": {
+      "optional": true
+    },
     "vue-template-compiler": {
-      "optional": false
+      "optional": true
     }
   }
 }
