--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     ]
   },
   "engines": {
-    "node": ">=14.18.3",
-    "npm": "^8.4.1"
+    "node": ">=14.18.3"
   },
   "repository": {
     "type": "git",
