--- a/package.json
+++ b/package.json
@@ -60,33 +60,36 @@
     "node"
   ],
   "devDependencies": {
-    "chai": "^4.3.6",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "chai": "^4.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-semistandard": "^17.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-mocha": "^10.4.2",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^43.0.2",
-    "eslint-plugin-vue": "^9.2.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "mocha": "^10.0.0",
-    "prettier": "^2.7.1",
-    "sinon": "^14.0.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
+    "mocha": "^10.4.0",
+    "prettier": "^3.2.5",
+    "sinon": "^17.0.1",
     "standard-version": "^9.5.0",
-    "vue": "^2.7.8"
+    "vue": "^2.7.16"
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
-    "ajv": "^8.11.0",
+    "ajv": "^8.12.0",
+    "convert-source-map": "^2.0.0",
     "find-cache-dir": "^3.3.2",
-    "fs-extra": "^10.1.0",
-    "loglevel": "^1.8.0",
-    "pirates": "^4.0.5",
+    "fs-extra": "^11.2.0",
+    "loglevel": "^1.9.1",
+    "pirates": "^4.0.6",
     "ramda": "^0.28.0",
     "source-map": "^0.7.4",
     "source-map-support": "^0.5.21"
