--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "npm run test -- --watch",
     "prerelease": "npm run lint && npm run test",
     "release": "git checkout master && git pull --rebase origin master && standard-version && git push --follow-tags origin master && npm publish --access=public",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "prettier": {
     "printWidth": 80,
@@ -74,7 +74,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-vue": "^9.25.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "mocha": "^10.4.0",
     "prettier": "^3.2.5",
