--- a/package.json
+++ b/package.json
@@ -65,14 +65,12 @@
     "chai": "^4.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-config-semistandard": "^17.0.0",
-    "eslint-config-standard": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-mocha": "^10.4.2",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-n": "^17.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^43.0.2",
+    "eslint-plugin-unicorn": "^52.0.0",
     "eslint-plugin-vue": "^9.25.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
@@ -89,6 +87,7 @@
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^11.2.0",
     "loglevel": "^1.9.1",
+    "merge-source-map": "^1.1.0",
     "pirates": "^4.0.6",
     "ramda": "^0.29.1",
     "source-map": "^0.7.4",
