--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
   },
   "peerDependencies": {
     "@babel/core": "7.x",
-    "@babel/preset-env": "7.x"
+    "@babel/preset-env": "7.x",
+    "vue": "2.x"
   },
   "peerDependenciesMeta": {
     "@babel/core": {
