--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "vue": "^2.7.16"
   },
   "dependencies": {
-    "@vue/component-compiler-utils": "^3.3.0",
     "ajv": "^8.12.0",
     "convert-source-map": "^2.0.0",
     "find-cache-dir": "^3.3.2",
@@ -107,19 +106,13 @@
   "peerDependencies": {
     "@babel/core": "7.x",
     "@babel/preset-env": "7.x",
-    "vue": "2.x"
+    "vue": "^2.7.0"
   },
   "peerDependenciesMeta": {
     "@babel/core": {
       "optional": true
     },
     "@babel/preset-env": {
-      "optional": true
-    },
-    "vue": {
-      "optional": true
-    },
-    "vue-template-compiler": {
       "optional": true
     }
   }
