--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "husky"
   },
   "workspaces": [
-    "test/vue2"
+    "test/vue2",
+    "test/vue3"
   ],
   "prettier": {
     "printWidth": 80,
@@ -80,9 +81,12 @@
     "prettier": "^3.2.5",
     "standard-version": "^9.5.0",
     "typescript": "^5.4.5",
-    "vue2": "npm:vue@^2.7.16"
+    "vue2": "npm:vue@^2.7.16",
+    "vue3": "npm:vue@^3.4.25"
   },
   "dependencies": {
+    "@jridgewell/gen-mapping": "^0.3.5",
+    "@jridgewell/trace-mapping": "^0.3.25",
     "ajv": "^8.12.0",
     "convert-source-map": "^2.0.0",
     "find-cache-dir": "^3.3.2",
@@ -98,7 +102,7 @@
     "@babel/core": "7.x",
     "@babel/preset-env": "7.x",
     "@babel/preset-typescript": "7.x",
-    "vue": "^2.7.0"
+    "vue": "^3 || ^2.7"
   },
   "peerDependenciesMeta": {
     "@babel/core": {
